# of-tools

./: .gitignore  Dockerfile
of-scraper-post/: .dockerignore  main.py  pyproject.toml
of-scraper-post/.github/: dependabot.yml
pyofscraperstash/: .gitignore  .pre-commit-config.yaml  __main__.py  pyproject.toml
pyofscraperstash/pyofscraperstash/: __main__.py
